@@ -1,8 +1,15 @@
+2009-08-02  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tclUnixFCmd.c (GetOwnerAttribute, SetOwnerAttribute)
+	(GetGroupAttribute, SetGroupAttribute): [Bug 1942222]: Stop calling
+	* unix/tclUnixFile.c (TclpGetUserHome): endpwent() and endgrent();
+	they've been unnecessary for ages.
+
 2009-07-31  Don Porter  <dgp@users.sourceforge.net>
 
-	* generic/tclStringObj.c:       Corrected failure to grow buffer
-	* tests/format.test:            when format spec request large width
-	floating point values.  Thanks to Clemens Misch.  [Bug 2830354]
+	* generic/tclStringObj.c:       [Bug 2830354]: Corrected failure to
+	* tests/format.test:            grow buffer when format spec request
+	large width floating point values.  Thanks to Clemens Misch.
 
 2009-07-24  Andreas Kupries  <andreask@activestate.com>
 
@@ -15,7 +22,8 @@
 
 2009-07-23  Joe Mistachkin  <joe@mistachkin.com>
 
-	* generic/tclNotify.c: Fix for [Bug 2820349].
+	* generic/tclNotify.c: [Bug 2820349]: Ensure that queued events are
+	freed once processed.
 
 2009-07-21  Kevin B. Kenny  <kennykb@acm.org>
 
